# cecs550_mab_research

./: .gitignore  Bandit.py  LinUCB.py  Readme.md  algorithms.py  checkpoint.py  context_lin_bandit_algorithms.pytxt  experiment.py  main.py  plotting.py  pyproject.toml  real_datasetter.py  real_main.py  scheduler_wine.py  utils.py  visualizer.py
checkpoints/01-05-2024 19-37-20/: checkpoint.py  visualizer.py
context_lin_bandits/: .gitignore  algorithms.py  output_reader.py  pyproject.toml  real_main.py  real_plotting.py  scheduler_ml100k.py  scheduler_wine.py  utils.py  wine_plotting_manual.py
context_lin_bandits/real_datasets/ml100k/preprocess/: data_vis.ipynb
context_lin_bandits/real_datasets/wine/preprocess/: X0_wine.npy  X1_wine.npy
context_lin_bandits/real_environments/: env_ml100k.py  env_wine.py  utils.py
context_lin_bandits/real_preprocess/: ml100k_aetrain.py  ml100k_preprocess.py  taobao_preprocess.py  wine_aetrain.py  wine_preprocess.py
jsons/: wine.json
real_datasets/wine/preprocess/: X1_wine.npy
real_environments/: env_wine.py  utils.py
real_preprocess/: ml100k_preprocess.py  utils.py  wine_aetrain.py  wine_preprocess.py
