[tool.poetry]
name = "mab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ucimlrepo = "^0.0.6"
pandas = "^2.2.2"
certifi = "^2024.2.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"
numba = "^0.59.1"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
