[tool.poetry]
name = "mab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ucimlrepo = "^0.0.6"
pandas = "^1.5.2"
certifi = "^2024.2.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
scikit-learn = "^1.2.1"
numba = "^0.56.4"
cupy-cuda12x = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
